Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39100

Accessibility CheckBox reports its size too large

XMLWordPrintable

    • 30
    • e747324f68df827dcea15bd0e3ee6b023542fe01

      Especially on mobile screen readers tend to activate items by sending mouse clicks. Having a check box in a layout gives the checkbox often the full screen width in a layout. This leads to both VO and TB to send mouse clicks to the middle of the item which is often outside the text bounds and thus doesn't toggle the checkbox or (radio button).

        For Gerrit Dashboard: QTBUG-39100
        # Subject Branch Project Status CR V

            frederik Frederik Gladhorn
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes