Accessibility: Fix rect for QComboBox and QRadioButton

This is especially relevant on mobile devices where screen readers often
send mouse clicks to the middle of the object.

Task-number: QTBUG-39100
Change-Id: I5972f21dd12434601d86136215ab9b61248c9691
Reviewed-by: Jan Arve Sæther <jan-arve.saether@digia.com>