src/widgets/widgets/qcheckbox.h
@@ -86,6 +86,7 @@ protected:
 private:
     Q_DECLARE_PRIVATE(QCheckBox)
     Q_DISABLE_COPY(QCheckBox)
+    friend class QAccessibleButton;
 };
 
 QT_END_NAMESPACE
